--- a/ProjectExample/ProjectExample.csproj
+++ b/ProjectExample/ProjectExample.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.2.2" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.2" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.10">
       <PrivateAssets>all</PrivateAssets>
@@ -20,7 +22,6 @@
     <Folder Include="Common\Extentions\" />
     <Folder Include="Migrations\" />
     <Folder Include="Modules\Medias\Services\" />
-    <Folder Include="Modules\Medias\Requests\" />
     <Folder Include="Mapping\" />
     <Folder Include="Persistence\Repositories\" />
   </ItemGroup>
