--- a/ProjectExample/appsettings.json
+++ b/ProjectExample/appsettings.json
@@ -1,10 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
     "AllowedHosts": "*",
-    "Urls": "https://0.0.0.0:7079"
+    "Urls": "http://0.0.0.0:5001"
 }
