--- a/ProjectExample/ProjectExample.csproj
+++ b/ProjectExample/ProjectExample.csproj
@@ -19,9 +19,11 @@
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.23" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Common\AppSetting\" />
     <Folder Include="Migrations\" />
     <Folder Include="wwwroot\Media\" />
   </ItemGroup>
