--- a/ProjectExample/appsettings.json
+++ b/ProjectExample/appsettings.json
@@ -1,11 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning",
-        "Microsoft.EntityFrameworkCore.Database.Command": "Information"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
-    "AllowedHosts": "*",
-    "Urls": "http://0.0.0.0:5001"
+  "AllowedHosts": "*",
+  "Urls": "https://0.0.0.0:7079",
+  "Database": {
+    "ConnectionString": "server=localhost;user id=root;password='';port=3306;database=example;"
+  }
+
 }
