--- a/ProjectExample/appsettings.json
+++ b/ProjectExample/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "http://0.0.0.0:5001",
+  "Urls": "https://0.0.0.0:7079",
   "Database": {
     "ConnectionString": "server=localhost;user id=root;password='';port=3306;database=example;"
   }
